cuberun-testlog2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: $request_uri
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: cuberun-testlog2
  namespace: testlog2
spec:
  rules:
  - host: testlog2.solgames.fun
    http:
      paths:
      - backend:
          service:
            name: cuberun-testlog2
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
